fix overflow post content

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13343,6 +13343,7 @@ iframe {
 
 .post-content p {
   margin: 16px 0;
+  margin-bottom: 0;
 }
 
 .limit-content {
