--- a/resources/sass/_newsfeed.scss
+++ b/resources/sass/_newsfeed.scss
@@ -5,6 +5,7 @@
     
     p{
         margin: 16px 0;
+        margin-bottom: 0;
     }
 }
 .limit-content{
